[gd_scene load_steps=12 format=2]

[ext_resource path="res://player/Player.gd" type="Script" id=1]
[ext_resource path="res://Skins/Players/Player1/Dash0.png" type="Texture" id=2]
[ext_resource path="res://weapons/rifle/Rifle.tscn" type="PackedScene" id=3]
[ext_resource path="res://interface/GUI.tscn" type="PackedScene" id=5]
[ext_resource path="res://Skins/Players/Player1/Wall0.png" type="Texture" id=6]
[ext_resource path="res://Skins/Players/Player1/Atack0.png" type="Texture" id=7]
[ext_resource path="res://Skins/Players/Player1/Jump0.png" type="Texture" id=8]
[ext_resource path="res://Skins/Players/Player1/Run0.png" type="Texture" id=9]
[ext_resource path="res://Skins/Players/Player1/Idle0.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Dash",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "Atack",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "Wall",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11.006, 30.0401 )

[node name="Player" type="KinematicBody2D" groups=[
"players",
]]
collision_layer = 17
collision_mask = 17
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Idle"

[node name="Shape" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Rifle" parent="." instance=ExtResource( 3 )]

[node name="GUI" parent="." instance=ExtResource( 5 )]
margin_left = -24.0
margin_top = -48.0
margin_right = 25.0
margin_bottom = 32.0

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.2
[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
